test/modules/errors/assign-var-from-module.good
assign-var-from-module.chpl:1: In module 'Program':
assign-var-from-module.chpl:4: error: modules (like 'M' here) cannot be mentioned like variables
